# dploy-kickstart

./: .gitignore  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml  publish.yml
dploy_kickstart/: __init__.py  annotations.py  cmd.py  deps.py  errors.py  openapi.py  server.py  transformers.py  wrapper.py
tests/: .coveragerc  fixtures.py  test_callable_annotation.py  test_cmd.py  test_dep_install.py  test_dploy_kickstart.py  test_entrypoint_importer.py  test_errors.py  test_func_exec.py  test_modelreport.py  test_openapi_gen.py  test_server.py  test_transformers.py  test_v.py  test_version.py
tests/assets/: c1_no_comments.py  c_error.py  check_mimetypes.py  local_asset.txt  nb_with_comments.ipynb  server_bytes.py  server_default.py  server_img.py  server_t1.py  test_func_exec_nb.ipynb  test_returned_result.py
tests/assets/deps_tests/: fake_requirements.txt  requirements.txt
tests/assets/deps_tests/my_pkg/: setup.py  stp.py
tests/assets/subfolder/: c1.py
