[tool.poetry]
name = "dploy-kickstart"
version = "0.1.2"
description = "Expose your functions as HTTP endpoints."
authors = ["Bart Smeets <bart@dploy.ai>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/dploy-ai/dploy-kickstart/"

[tool.poetry.scripts]
kickstart = 'dploy_kickstart.cmd:cli'

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
waitress = "^1.4.3"
paste = "^3.4.0"
flask = "^1.1.2"
apispec = "^3.3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
nbformat = "^5.0.6"
nbconvert = "^5.6.1"
black = "^19.10b0"
flake8 = "^3.7.9"
pytest-cov = "^2.8.1"
requests = "^2.23.0"

[tool.black]
line-length = 88
target-version = ["py37","py38"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

